--- a/test-scss/competition.html
+++ b/test-scss/competition.html
@@ -164,7 +164,7 @@
 
 
 
-    <div class="filter__place center d-flex align-items-center justify-content-between mt-3">
+    <div class="filter__place center d-flex align-items-center justify-content-between mt-4 pt-2">
         <div class="nav nav-tabs border-0 d-none d-md-flex" id="nav-tab" role="tablist">
             <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
                 href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
@@ -178,10 +178,15 @@
                 aria-controls="nav-contact" aria-selected="false">ბიზნესი</a>
         </div>
         <div class="drop-parent col-12 col-sm-6 col-md-3 px-0 mt-3 d-block d-md-none">
-            <div class=" dropdown-toggle border w-100 drop d-flex align-items-center justify-content-between" type="button"
+            <div class=" dropdown-toggle border col-7 drop d-flex align-items-center justify-content-between" type="button"
                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>
                     ნებისმიერი
+                </span>
+                <span style="transform: rotate(-90deg);">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10.688" viewBox="0 0 6 10.688">
+                        <path id="Path_932" data-name="Path 932" d="M187.694,328.864l-4.672-4.672a.667.667,0,1,0-.944.944l4.208,4.208-4.208,4.208a.667.667,0,1,0,.944.944l4.672-4.688A.675.675,0,0,0,187.694,328.864Z" transform="translate(187.886 334.688) rotate(180)" fill="rgba(0,0,0,0.7)" fill-rule="evenodd"/>
+                      </svg>
                 </span>
             </div>
             <div class="dropdown-menu mt-2 px-2" aria-labelledby="dropdownMenuButton">
@@ -210,7 +215,7 @@
     <section class="py-md-4 py-2">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block br-8 overflow-hidden">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -222,9 +227,9 @@
                                 <div class="w-100 d-flex align-items-center justify-content-between">
                                     <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
                                     <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
-                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
                                     </div>
                                 </div>
                                 <h1 class="f-20 mt-md-4 mt-3 c-black helvetica-75">ლოგო დიზაინის კონკურსი</h1>
@@ -238,16 +243,16 @@
                                 <div class="right__side">
                                     <button class=" helvetica-75 purple-hover-button d-none d-md-flex">გაიგე მეტი</button>
                                     <div class="f-14 c-light-text mt-2 helvetica-55 d-md-none d-inline-block">
-                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block br-8 overflow-hidden">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -259,9 +264,9 @@
                                 <div class="w-100 d-flex align-items-center justify-content-between">
                                     <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
                                     <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
-                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
                                     </div>
                                 </div>
                                 <h1 class="f-20 mt-md-4 mt-3 c-black helvetica-75">ლოგო დიზაინის კონკურსი</h1>
@@ -275,16 +280,16 @@
                                 <div class="right__side">
                                     <button class=" helvetica-75 yellow-hover-button d-none d-md-flex">გაიგე მეტი</button>
                                     <div class="f-14 c-light-text mt-2 helvetica-55 d-md-none d-inline-block">
-                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
+                <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-md-3 my-1">
                     <div class="d-flex flex-column inside__block br-8 overflow-hidden">
 
                         <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
@@ -296,9 +301,9 @@
                                 <div class="w-100 d-flex align-items-center justify-content-between">
                                     <span class="f-14 c-light-text helvetica-55">ლოგო დიზაინ კონკურსი</span>
                                     <div class="f-14 c-light-text mt-2 helvetica-55 d-none d-md-inline-block">
-                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
                                     </div>
                                 </div>
                                 <h1 class="f-20 mt-md-4 mt-3 c-black helvetica-75">ლოგო დიზაინის კონკურსი</h1>
@@ -312,9 +317,9 @@
                                 <div class="right__side">
                                     <button class=" helvetica-75 purple-hover-button d-none d-md-flex">გაიგე მეტი</button>
                                     <div class="f-14 c-light-text mt-2 helvetica-55 d-md-none d-inline-block">
-                                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
-                                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">95</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">45</span>:<span
+                                            class=" helvetica-75 c-black bc-gray-light br-5 p-1 f-16 f-16">25</span>
                                     </div>
                                 </div>
                             </div>
