--- a/test-scss/competition_1.html
+++ b/test-scss/competition_1.html
@@ -173,16 +173,18 @@
                 <img class="w-100" src="./img/vlog.svg" alt="">
             </div>
             <div class="col-12 col-md-8 px-0 right__side">
-                <div class="up__side d-flex justify-content-between align-items-center flex-wrap">
+                <div class="up__side d-flex flex-column justify-content-between align-items-md-center flex-wrap">
                     <h1 class="f-20 c-black mt-2 helvetica-75">WEB დეველოპმენტი</h1>
-                    <div class="f-14 c-light-text mt-2 helvetica-55">დარჩენილია
-                        <span class=" helvetica-75 c-black bc-banner br-5 p-1">95</span>:<span
-                            class=" helvetica-75 c-black bc-banner br-5 p-1">45</span>:<span
-                            class=" helvetica-75 c-black bc-banner br-5 p-1">25</span>
+                    <span class="f-14 d-block d-md-none mt-2 c-card-text helvetica-55 mb-1">25 ივნისი, 2020</span>
+
+                    <div class="f-14 c-light-text mt-3 mt-md-2 pl-3 pl-md-0 helvetica-55">დარჩენილია
+                        <span class=" helvetica-75 c-black bc-gray-light br-5 p-1">95</span>:<span
+                            class=" helvetica-75 c-black bc-gray-light br-5 p-1">45</span>:<span
+                            class=" helvetica-75 c-black bc-gray-light br-5 p-1">25</span>
                     </div>
 
                 </div>
-                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">25 ივნისი, 2020</span>
+                <span class="f-14 d-none d-md-block mt-2 c-card-text helvetica-55 mb-1">25 ივნისი, 2020</span>
                 <img class="w-100 mt-3 d-flex d-md-none" src="./img/vlog.svg" alt="">
                 <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">შექმენი ციფრული ინდუსტრიის აკადემიის ლოგოს
                     რედიზაინი; ატვირთე ნამუშევარი
@@ -220,7 +222,9 @@
                         </div>
                         <div class="ml-3 pl-1 right_side">
                             <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
-                            <span class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ ადგილზე გასული 
+                            <span
+                                class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ
+                                ადგილზე გასული
                                 მიიღებს უფასო კურსს.</span>
 
                         </div>
@@ -232,18 +236,23 @@
                         </div>
                         <div class="ml-3 pl-1 right_side">
                             <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
-                            <span class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ ადგილზე გასული 
+                            <span
+                                class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ
+                                ადგილზე გასული
                                 მიიღებს უფასო კურსს.</span>
 
                         </div>
-                    </div>                    <div class="blocks mb-5 mb-md-0 d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
+                    </div>
+                    <div class="blocks mb-5 mb-md-0 d-flex col-12 col-md-4 pl-0 mt-3 mt-md-0">
                         <div
                             class="left__side c-blue f-28 helvetica-55 bc-banner number d-flex justify-content-center align-items-center">
                             1
                         </div>
                         <div class="ml-3 pl-1 right_side">
                             <span class="f-16 d-block c-black helvetica-55">უფასო კურსი</span>
-                            <span class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ ადგილზე გასული 
+                            <span
+                                class="f-14 d-block mt-md-3 mt-2 c-light-text helvetica-55 col-md-10 col-12 px-0">პირველ
+                                ადგილზე გასული
                                 მიიღებს უფასო კურსს.</span>
 
                         </div>
