--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -153,7 +153,7 @@
                     role="tab" aria-controls="nav-contact" aria-selected="false">ფასდაკლებით</a>
             </div>
             <div class="drop-parent col-7 ml-n3 col-sm-5 d-flex d-md-none pl-0">
-                <div class=" dropdown-toggle position-relative w-100 px-1 drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
+                <div class=" dropdown-toggle course__dropper position-relative w-100 px-1 drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="f-14">
                         პოპულარული
@@ -186,7 +186,7 @@
 
             <div class="drop-parent col-12 pl-0 pr-0 mt-3">
                 <span class="f-13 c-black helvetica-75 d-block mb-2">სკოლა</span>
-                <div class=" dropdown-toggle w-100 filter-responsive drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
+                <div class=" dropdown-toggle w-100 filter-responsive drop d-flex align-items-center justify-content-between bc-white" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
                         ნებისმიერი
@@ -218,7 +218,7 @@
             <div class="drop-parent col-12 pl-0 pr-0 mt-3">
                 <span class="f-13 c-black helvetica-75 d-block mb-2">დონე</span>
 
-                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
+                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-white" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
                         ნებისმიერი
@@ -251,7 +251,7 @@
             <div class="drop-parent col-12 pr-0 pl-0 mt-3">
                 <span class="f-13 c-black helvetica-75 d-block mb-2">პროგრამა</span>
 
-                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-gray-light" type="button"
+                <div class=" dropdown-toggle filter-responsive w-100 drop d-flex align-items-center justify-content-between bc-white" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
                         ნებისმიერი
@@ -306,7 +306,7 @@
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
-                        <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
+                        <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
                                 <img src="./img/Group 342.svg" alt="">
                             </div>
@@ -324,10 +324,9 @@
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
                             <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
+                                <div
+                                    class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-light-blue">
+                                    <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
                                 </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
@@ -340,7 +339,7 @@
                 <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3 mb-3">
                     <div class="d-flex flex-column inside__block">
 
-                        <div class="up__side bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
+                        <div class="up__side br-tl br-tr bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
                                 <img src="./img/Group 342.svg" alt="">
                             </div>
@@ -358,10 +357,10 @@
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
                             <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
-                                </div>
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-orange">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 orange-hover-button">გაიგე მეტი</button>
 
@@ -374,7 +373,7 @@
                     class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
-                        <div class="up__side bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
+                        <div class="up__side br-tl br-tr bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
                                 <img src="./img/Group 342.svg" alt="">
                             </div>
@@ -392,9 +391,9 @@
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
                             <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
+                                <div
+                                    class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-purple">
+                                    <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
                                 </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
@@ -407,7 +406,7 @@
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
-                        <div class="up__side bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
+                        <div class="up__side br-tl br-tr bc-blue d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
                                 <img src="./img/Group 342.svg" alt="">
                             </div>
@@ -425,10 +424,9 @@
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
                             <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-                                    <!-- add like__remove class to span for row effect -->
-
+                                <div
+                                    class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-light-blue">
+                                    <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
                                 </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 blue-hover-button">გაიგე მეტი</button>
@@ -441,7 +439,7 @@
                 <div class="block  col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block mt-3 mb-3">
                     <div class="d-flex flex-column inside__block">
 
-                        <div class="up__side bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
+                        <div class="up__side br-tl br-tr bc-orange d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
                                 <img src="./img/Group 342.svg" alt="">
                             </div>
@@ -459,10 +457,10 @@
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
                             <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
-                                </div>
+                                <div
+                                class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-orange">
+                                <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
+                            </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 orange-hover-button">გაიგე მეტი</button>
 
@@ -475,7 +473,7 @@
                     class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
                     <div class="d-flex flex-column inside__block">
 
-                        <div class="up__side bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
+                        <div class="up__side br-tl br-tr bc-purple d-flex justify-content-between align-items-end overflow-hidden ">
                             <div class="img-block d-flex align-items-center pl-3">
                                 <img src="./img/Group 342.svg" alt="">
                             </div>
@@ -493,9 +491,9 @@
                                     შეძლონ საკუთარი იდეების რეალიზება.</span>
                             </div>
                             <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
-                                <div class="left__side d-flex align-items-center flex-wrap">
-                                    <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
-
+                                <div
+                                    class="left__side d-flex align-items-center flex-wrap py-2 text__c__left br-c-purple">
+                                    <span class="f-23 pl-md-3 pl-2 helvetica-55 c-black py-1">1250 ₾</span>
                                 </div>
                                 <div class="right__side">
                                     <button class=" helvetica-75 purple-hover-button">გაიგე მეტი</button>
@@ -505,7 +503,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
 
         </div>
