--- a/test-scss/vlog.html
+++ b/test-scss/vlog.html
@@ -144,7 +144,7 @@
 
 
 
-    <div class="filter__place center d-flex align-items-center justify-content-between mt-3">
+    <div class="filter__place center d-flex align-items-center justify-content-between mt-3 pt-1">
         <div class="nav nav-tabs border-0 d-none d-md-flex" id="nav-tab" role="tablist">
             <a class="filter-a f-14 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
                 href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
@@ -193,7 +193,7 @@
 
     </div>
 
-    <section class=" py-md-3 py-2 mt-md-1">
+    <section class=" pb-md-3 pb-2 mt-md-1">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row master-class">
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
