--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -116,34 +116,17 @@
         </div>
         <div class="burger-menu flex " id="burger-menu">
             <div class=" burger-menu-child ">
-                <div id="accordion" class="mx-auto d-flex flex-column up__side" style="max-width: 80%;">
+                <div id="accordion" class="mx-auto d-flex flex-column up__side w-100">
                     <div class="card">
-                        <div class="card-header" id="headingOne">
+                        <div class="card-header p-0" id="headingOne">
                             <h5 class="mb-0">
-                                <span class="btn c-light-text f-14 helvetica-75">
+                                <span class="btn px-0 c-light-text f-16 helvetica-75">
                                     კურსები
 
                                 </span>
 
                             </h5>
                         </div>
-
-                        <!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                            data-parent="#accordion">
-                            <div class="card-body py-2">
-                                <ul class="left__side fuuter__lists mt-2  ml-4 mb-3 p-0">
-                                    <li class="list d-flex align-items-center mt-2">
-                                        <a class="c-light-text pointer f-14 helvetica-55">პოპულარული</a>
-                                    </li>
-                                    <li class="list d-flex align-items-center mt-2">
-                                        <a class="c-light-text pointer f-14 helvetica-55">ახალი</a>
-                                    </li>
-                                    <li class="list d-flex align-items-center mt-2">
-                                        <a class="c-light-text pointer f-14 helvetica-55">ფასდაკლებით</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div> -->
                     </div>
 
 
@@ -152,23 +135,23 @@
 
 
 
-                    <a class="btn c-light-text f-14 helvetica-75 text-left pl-4 ml-2">
+                    <a class="btn px-0 c-light-text f-16 helvetica-75 text-left ">
                         მასტერკლასები
                     </a>
 
 
                     <div class="card">
-                        <div class="card-header py-2" id="headingTwo">
+                        <div class="card-header py-2 px-0" id="headingTwo">
                             <h5 class="mb-0">
-                                <a class="btn collapsed c-light-text f-14 helvetica-75" data-toggle="collapse"
+                                <a class=" collapsed  p-0 c-light-text f-16 helvetica-75 d-flex justify-content-between" data-toggle="collapse"
                                     data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                     შეთავაზებები
-                                    <img class="drop-icon" src="./img/Path.svg" alt="">
+                                    <img class="icon" src="./img/Path.svg" alt="">
                                 </a>
                             </h5>
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                            <div class="card-body ml-4 px-0 py-0">
+                            <div class="card-body ml-2 px-0 py-0">
                                 <ul class="border-left border-left-1 center__side fuuter__lists mb-3 ml-2 p-0 pl-4">
                                     <li class="list d-flex align-items-center mt-2">
                                         <a class="c-light-text f-14 helvetica-55 pointer">პაკეტები</a>
@@ -183,10 +166,10 @@
                             </div>
                         </div>
                     </div>
-                    <a class="btn c-light-text f-14 helvetica-75 text-left pl-4 ml-2">
+                    <a class="btn c-light-text f-16 helvetica-75 text-left px-0">
                         ბლოგი
                     </a>
-                    <a class="btn c-light-text f-14 helvetica-75 text-left pl-4 ml-2 mt-2">
+                    <a class="btn c-light-text f-16 helvetica-75 text-left px-0">
                         ჩვენ შესახებ
                     </a>
                 </div>
@@ -222,7 +205,7 @@
                         class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
                             class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
-                            <h1 class="title f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
+                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
                                 დარჩი სახლში და განაგრძე განვითარება
                                 <img src="./img/succes.svg" alt="" class="icon d-none d-md-block">
                             </h1>
@@ -243,7 +226,7 @@
                         class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
                             class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
-                            <h1 class="title f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
+                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
                                 დარჩი სახლში და განაგრძე განვითარება
                                 <img src="./img/succes.svg" alt="" class="icon d-none d-md-block">
                             </h1>
@@ -264,7 +247,7 @@
                         class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
                             class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
-                            <h1 class="title f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
+                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
                                 დარჩი სახლში და განაგრძე განვითარება
                                 <img src="./img/succes.svg" alt="" class="icon d-none d-md-block">
                             </h1>
@@ -286,23 +269,23 @@
     <section class="premiup__prizes py-100">
         <div class="center ">
             <div class="d-flex flex-column-reverse flex-md-row justify-content-between">
-                <div class="left__side col-12 col-md-6 d-flex flex-wrap ml-n2 p-0">
-                    <div class="col-sm-6 col-12 p-2">
+                <div class="left__side col-12 col-md-6 d-flex flex-wrap ml-md-n2 p-0">
+                    <div class="col-sm-6 col-12 py-2 px-0 px-md-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/purple-Path183.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-sm-6 col-12 p-2">
+                    <div class="col-sm-6 col-12 py-2 px-0 px-md-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/Group 420.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-sm-6 col-12 p-2">
+                    <div class="col-sm-6 col-12 py-2 px-0 px-md-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/Group 460.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-sm-6 col-12 p-2">
+                    <div class="col-sm-6 col-12 py-2 px-0 px-md-2">
                         <div class="block d-flex justify-content-center align-items-centerk">
                             <img src="./img/Group 469.svg" alt="">
                         </div>
@@ -652,8 +635,8 @@
                                 <img class="mr-2" src="./img/Group 793.svg" alt="">
                                 <p class="f-10 d-flex d-md-none c-blue helvetica-55 mb-3 mt-1">UI & UX დიზაინის კურსი
                                 </p>
-                                <span class="f-12 d-none d-md-flex c-light-text helvetica-55">ედვარდ გულაშვილი</span>
-                                <span class="f-12 d-flex d-md-none c-black helvetica-75">ედვარდ გულაშვილი</span>
+                                <span class="f-12 d-none d-md-flex c-light-text helvetica-55 name">ედვარდ გულაშვილი</span>
+                                <span class="f-12 d-flex d-md-none c-black helvetica-75 name">ედვარდ გულაშვილი</span>
                             </div>
                         </div>
                     </div>
@@ -669,8 +652,8 @@
                                 <img class="mr-2" src="./img/Group 793.svg" alt="">
                                 <p class="f-10 d-flex d-md-none c-blue helvetica-55 mb-3 mt-1">UI & UX დიზაინის კურსი
                                 </p>
-                                <span class="f-12 d-none d-md-flex c-light-text helvetica-55">ედვარდ გულაშვილი</span>
-                                <span class="f-12 d-flex d-md-none c-black helvetica-75">ედვარდ გულაშვილი</span>
+                                <span class="f-12 d-none d-md-flex c-light-text helvetica-55 name">ედვარდ გულაშვილი</span>
+                                <span class="f-12 d-flex d-md-none c-black helvetica-75 name">ედვარდ გულაშვილი</span>
                             </div>
                         </div>
                     </div>
@@ -686,8 +669,8 @@
                                 <img class="mr-2" src="./img/Group 793.svg" alt="">
                                 <p class="f-10 d-flex d-md-none c-blue helvetica-55 mb-3 mt-1">UI & UX დიზაინის კურსი
                                 </p>
-                                <span class="f-12 d-none d-md-flex c-light-text helvetica-55">ედვარდ გულაშვილი</span>
-                                <span class="f-12 d-flex d-md-none c-black helvetica-75">ედვარდ გულაშვილი</span>
+                                <span class="f-12 d-none d-md-flex c-light-text helvetica-55 name">ედვარდ გულაშვილი</span>
+                                <span class="f-12 d-flex d-md-none c-black helvetica-75 name">ედვარდ გულაშვილი</span>
                             </div>
                         </div>
                     </div>
@@ -796,7 +779,7 @@
                 <span class="f-10 helvetica-55 sub__text c-light-text transition d-flex mt-1">კალათა</span>
             </div>
             <div class="block pointer c-light-text d-flex flex-column align-items-center c-hover-blue transition">
-                <span class="sub__icon">
+                <span class="sub__icon pl-1">
                     <svg id="noun_Blog_1087190" xmlns="http://www.w3.org/2000/svg" width="22" height="17.004"
                         viewBox="0 0 22 17.004">
                         <path class="path" id="Path_15678" data-name="Path 15678"
