--- a/test-scss/about-us.html
+++ b/test-scss/about-us.html
@@ -169,26 +169,26 @@
 
     <seciton class="design__section overflow-hidden">
         <div class="center">
-            <div class="row d-flex align-items-center py-5 mt-2 justify-content-md-between justify-content-center flex-column flex-lg-row-reverse">
+            <div class="row d-flex align-items-center py-60 justify-content-md-between justify-content-center flex-column flex-lg-row-reverse">
                 <div class="left__side position-relative d-none d-md-flex col-md-8 col-lg-5">
                     <div class="w-100 py-4 block">
                         <img class="w-100" src="./img/Artboard-1.png" alt="">
                     </div>
                 </div>
                 <div class="right__side col-12 col-lg-7 pl-0">
-                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-5 f-24 c-black">როგორ ვქმნით საუკეთესო სასწავლო</span>
-                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-4 f-24 c-black">აუდიტორიაზე ადაპტირებული </span>
-                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-5 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
+                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-md-4 mb-3 f-28 c-black">როგორ ვქმნით საუკეთესო სასწავლო</span>
+                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 mt-md-3 f-24 c-black">აუდიტორიაზე ადაპტირებული </span>
+                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-md-3 pb-md-1 mb-2 lh-24 f-16 c-card-text">კურსი მოიცავს იმ
                         ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
                         განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
                         ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
-                        <div class="block d-flex d-md-none py-3">
+                        <div class="block d-flex d-md-none py-3 mb-3">
                             <img class="w-100" src="./img/Artboard-1.png" alt="">
                         </div>
-                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-4 f-24 c-black">რეალური ქეისები, რეალური სამუშაო 
+                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-md-3 pb-md-1 mb-2 f-24 c-black">რეალური ქეისები, რეალური სამუშაო 
                         შესაძლებლობები </span>
 
-                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
+                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-card-text">კურსი მოიცავს იმ
                         ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
                         განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
                         ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
@@ -198,7 +198,7 @@
     </seciton>
     <section class="count__section about__count bc-banner d-flex">
         <div class="scroll-center position-relative">
-            <div class="d-flex justify-content-between py-5 flex-nowrap overflow-auto">
+            <div class="d-flex justify-content-between pb-5 mt-n3 mt-md-0 pt-md-5 flex-nowrap overflow-auto">
                 <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
                     <span class="f-35 c-blue helvetica-75 d-block mb-3">1234</span>
                     <span class="f-20 c-light-text helvetica-75">კურსდამთავრებული</span>
@@ -219,23 +219,23 @@
             <span class="bc-banner scroll__overlay"></span>
         </div>
     </section>
-    <section class="py-5 overflow-hidden">
+    <section class="pt-md-5 pb-5 overflow-hidden">
         <div class="center">
             <div class="row">
 
                 <div class="d-flex align-items-center justify-content-between row">
-                    <div class="left__side col-12 p-0 col-md-6 pointer">
+                    <div class="left__side col-12 p-0 col-md-6 pointer mb-3 mb-md-0">
                         <div>
                             <img class="w-100 " src="./img/Group 1178.svg" alt="">
                         </div>
                     </div>
                     <div class="right__side col-12 col-md-5 d-md-flex flex-column">
-                        <span class="f-24 helvetica-75 c-black d-block mb-4">რატომ უნდა შემოგვიერთდე?</span>
-                        <span class="f-16 c-light-text helvetica-55">დღეს ნებისმიერი ბიზნესისა თუ ინდივიდისთვის 
+                        <span class="f-24 helvetica-75 c-black d-block mb-md-4 mb-2">რატომ უნდა შემოგვიერთდე?</span>
+                        <span class="f-16 c-card-text helvetica-55">დღეს ნებისმიერი ბიზნესისა თუ ინდივიდისთვის 
                             წარმატების მისაღწევად აუცილებელია ციფრულ 
                             ტექნოლოგიაზე ოპტიმიზირებულ სტრატეგიასა თუ 
                             სტრუქტურასთან ადაპტირება.</span>
-                        <span class="f-16 c-light-text helvetica-55 d-flex mt-4">ციფრულ ეკოსისტემაზე მორგებულ, კომფორტულ 
+                        <span class="f-16 c-card-text helvetica-55 d-flex mt-4">ციფრულ ეკოსისტემაზე მორგებულ, კომფორტულ 
                             გარემოში შეხვდები ადამიანებს, რომლებიც საკუთარ 
                             ხედვებსა და უნიკალურ მიდგომებს გაგიზიარებენ, რაც 
                             სასურველი კარიერული ეტაპების მიღწევაში 
@@ -247,12 +247,12 @@
             </div>
         </div>
     </section>
-    <section class="join__us bc-banner py-5">
+    <section class="join__us bc-banner py-60">
         <div class="center d-flex flex-column align-items-center">
             <span class="f-24 helvetica-75 c-black d-block mb-3 pt-3">შეოგვიერთდი</span>
-            <span class="f-16 helvetica-55 c-light-text text-center lh-24 d-block col-12 col-md-5">გაიარე ჩვენთან არსებუი კურსები და გახდი ციფრული 
+            <span class="f-16 helvetica-55 pt-2 c-card-text text-center lh-24 d-block col-12 col-md-5">გაიარე ჩვენთან არსებუი კურსები და გახდი ციფრული 
                 ინდუსტრიის აკადეიის კურსდათავრებული</span>
-                <button class="blue-button f-14 my-3">კურსები</button>
+                <button class="blue-button f-14 mt-4">კურსები</button>
         </div>
     </section>
 
