--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -205,9 +205,9 @@
                         class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
                             class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
-                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
+                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left position-relative">
                                 დარჩი სახლში და განაგრძე განვითარება
-                                <img src="./img/succes.svg" alt="" class="icon d-none d-md-block">
+                                <img src="./img/succes.svg" alt="" class="bottom-0 d-md-block d-none icon position-absolute right-0">
                             </h1>
                             <span class="c-blak helvetica-55 text-center f-16 lh-24 text-md-left">დარეგისტრირდი მიიღე
                                 50%-მდე
@@ -226,9 +226,9 @@
                         class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
                             class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
-                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
+                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left position-relative">
                                 დარჩი სახლში და განაგრძე განვითარება
-                                <img src="./img/succes.svg" alt="" class="icon d-none d-md-block">
+                                <img src="./img/succes.svg" alt="" class="bottom-0 d-md-block d-none icon position-absolute right-0">
                             </h1>
                             <span class="c-blak helvetica-55 text-center f-16 lh-24 text-md-left">დარეგისტრირდი მიიღე
                                 50%-მდე
@@ -247,9 +247,9 @@
                         class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
                             class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
-                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left">
+                            <h1 class="title_home f-40 helvetica-75 lh-48 mb-md-5 mb-3 text-center text-md-left position-relative">
                                 დარჩი სახლში და განაგრძე განვითარება
-                                <img src="./img/succes.svg" alt="" class="icon d-none d-md-block">
+                                <img src="./img/succes.svg" alt="" class="bottom-0 d-md-block d-none icon position-absolute right-0">
                             </h1>
                             <span class="c-blak helvetica-55 text-center f-16 lh-24 text-md-left">დარეგისტრირდი მიიღე
                                 50%-მდე
